# for_atcoder

./: .editorconfig  CMakeLists.txt  template.cpp
include/bits/: stdc++.h
problems/AISing2019/: A.cpp  B.cpp  C.cpp  E.cpp
problems/beginner_problems/: ABC007C.cpp  ATC001A.cpp  DPL_1_B.cpp
